@@ -123,13 +123,16 @@
 #define S_R8X           32
 
 #define S_R16           34
-#define S_R16X          35
+
 #define S_CND           36
 #define S_FLAG          37
 
 #define S_R32_BCDE      38
 #define S_R32_JKHL      39
 #define S_RXPC          40
+
+#define S_R16AF         41
+#define S_R16AF_ALT     42
 
 /*
  * Indexing modes
@@ -225,7 +228,8 @@ extern  struct  adsym   R8[];
 extern  struct  adsym   R8X[];
 extern  struct  adsym   R8IP[];
 extern  struct  adsym   R16[];
-extern  struct  adsym   R16X[];
+extern  struct  adsym   R16AF[];
+extern  struct  adsym   R16AF_ALT[];
 
 extern  struct  adsym   R32_JKHL[];
 extern  struct  adsym   R32_BCDE[];
