@@ -1,5 +1,12 @@
 2023-08-26 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* sdas/asrab/rab.h,
+	  sdas/asrab/rabadr.c,
+	  sdas/asrab/rabmch.c:
+	  Fix handling of some invalid instructions in Rabbit assembler (bug #3638, patch by by D-mo).
+
+2023-08-26 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* support/regression/tests/bug-3165.c,
 	  support/regression/tests/bug-3167.c:
 	  Rename regression test to mach correct bug number.
